5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1764_672.log
== TEST (2019-05-21 16:41:55) 
-- CODE:
from numpy import *

valorN = int(input("Valor de N: "))

posicoes = ones (20), dtype=int

print (posicoes)
-- ERROR:
File "XXXX", line 5
    posicoes = ones (20), dtype=int
              ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:42:29) 
-- CODE:
from numpy import *

valorN = int(input("Valor de N: "))

posicoes = ones(), dtype=int

print (posicoes)
-- ERROR:
File "XXXX", line 5
    posicoes = ones(), dtype=int
              ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:42:43) 
-- CODE:
from numpy import *

valorN = int(input("Valor de N: "))

posicoes = ones 20, dtype=int

print (posicoes)
-- ERROR:
File "XXXX", line 5
    posicoes = ones 20, dtype=int
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:44:28) 
-- CODE:
from numpy import *

valorN = int(input("Valor de N: "))

posicoes = array([ones ()])

print (posicoes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:44:43) 
-- CODE:
from numpy import *

valorN = int(input("Valor de N: "))

posicoes = array([ones 20])

print (posicoes)
-- ERROR:
File "XXXX", line 5
    posicoes = array([ones 20])
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:47:39) 
-- CODE:
from numpy import *

valorN = int(input("Valor de N: "))

valor = ones()

print (valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:49:02) 
-- CODE:
from numpy import *

valorN = int(input("Valor de N: "))

valor = ones(10, dtype=int)

print (valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:50:27) 
-- CODE:
from numpy import *

valorN = int(input("Valor de N: "))

valor = ones(valorN, dtype=int)

print (valorN)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:50:47) 
-- CODE:
from numpy import *

valorN = int(input("Valor de N: "))

valor = ones(valorN, dtype=int)

print (valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:50:52) 
-- CODE:
from numpy import *

valorN = int(input("Valor de N: "))

valor = ones(valorN, dtype=int)

print (valor)
-- EXECUTION TIME:
0.546032
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 20:32:37) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721


from numpy import *

valorN = int(input("Valor de N: "))

valor = ones(valorN, dtype=int)

print (valor)
-- EXECUTION TIME:
0.514784
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 20:48:28) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721


from numpy import *

valorN = int(input("Valor de N: "))

valor = ones(valorN, dtype=int)

print (valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 20:49:26) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721


from numpy import *

valorN = int(input("Valor de N: "))

valor = zeros(valorN, dtype=int)

print (valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 21:09:58) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721


from numpy import *

valorN = int(input("Valor de N: "))

valor = ones(valorN, dtype=int)

print (valor,end=",")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
